<resources>
    <string name="app_name">Basic Assembler</string>
    <string name="voltageBatteryHeader">Battery Voltage: </string>
    <string name="voltageChargerHeader">Charger Voltage: </string>
    <string name="tiltAngleHeader">Tilt Angle (deg): </string>
    <string name="angularVelocityHeader">Angular Velocity (deg/s): </string>
    <string name="leftWheelHeader">Left Wheel Count: </string>
    <string name="rightWheelHeader">Right Wheel Count: </string>
    <string name="soundDataHeader">Sound Data: </string>
    <string name="frameRateHeader">Frame Rate: </string>
    <string name="tiltGaugeLabel">Tilt</string>
    <string name="tiltGaugeUnit">deg</string>
    <string name="angularVelocityGaugeLabel">Angular velocity</string>
    <string name="angularVelocityGaugeUnit">deg/s</string>
    <string name="leftWheelGaugeLabel">Left wheel</string>
    <string name="rightWheelGaugeLabel">Right wheel</string>
    <string name="wheelGaugeUnit">mm/s</string>
    <string name="leftWheelHeaderText">Left Wheel</string>
    <string name="rightWheelHeaderText">Right Wheel</string>
    <string name="coilVoltageTextValue">0.00</string>
    <string name="coilVoltageHeaderValue">Coil Voltage: </string>
    <string name="timeStepHeaderText">"TimeStep: "</string>
    <string name="episodeHeader">"Episode: "</string>
</resources>
